CSS changes * Fixed card css for wraping issue.

--- a/secret-family-recipes/src/css/Card.css
+++ b/secret-family-recipes/src/css/Card.css
@@ -1,5 +1,7 @@
 .cardContainer {
 	display: flex;
 	flex-direction: row;
-	justify-content: center;
+	flex-wrap: wrap;
+	align-content: center;
+	justify-content: space-around;
 }
